# dirt

./: .gitignore  README.md  pyproject.toml
dirt/: bug.py  constants.py  consumable.py  defaults.py  distributions.py  entitree.py  heredity.py  linear.json  linear_new.json  linear_random_10.json  sundial.py  unconditional.json  unconditional_random_10.json  variable_length.py  wrappers.py
dirt/configs/: config.yaml  sweep.yaml
dirt/configs/params/: default.yaml
dirt/configs/traits/: default.yaml
dirt/distribution/: ou.py  stochastic_rounding.py
dirt/distribution/dist_poc/: README.md  poc_conv_with_reduce.py
dirt/dynamics/: .gridworld2d.py.swp  leapfrog.py
dirt/envs/: bug.py  landscape.py  nom.py  nom_old.py  nomnom.py  simple_env.py  simple_env_dist.py  tera_arium.py  test_halo_exchange.py  test_tera_arium_smoke.py
dirt/envs/tera_arium/: __init__.py  bug.py  env.py  landscape.py
dirt/examples/: big_env.py  nom.py  nom_old.py  nomnom.py  poot.py  train_nomnom.py
dirt/examples/gas/: gas.py
dirt/examples/landscape/: landscape.py
dirt/examples/nomnom/: analyze_experiment.py  check_file.ipynb  check_file.py  experiment_nomnom.py  job.sh  nomnom_env.py  nomnom_env_evaluate.py  nomnom_evaluate.py  nomnom_model.py  nomnom_policy.py  test.edgelist  train_nomnom.py  treetime.py  visualize_nomnom.py
dirt/examples/static_ga/: train_static_ga.py
dirt/experiments/: migration_video.py
dirt/experiments/distributed/: train.py
dirt/experiments/landscape_example/: desert.py  islands.py  mountains.py  ponds.py  shallows.py  train.py
dirt/experiments/landscapes/: mountains.py  ponds.py  shallows.py
dirt/experiments/nomnom_example_batched/: analyze.py  train.py
dirt/experiments/nomnom_example_bulk/: analyze.py  train.py
dirt/gridworld2d/: audio.py  climate_pattern_day.py  climate_pattern_day_cont.py  climate_pattern_day_scale.py  climate_pattern_day_year.py  climate_pattern_year.py  distributed.py  downsample.py  dynamics.py  erosion.py  gas.py  geology.py  grid.py  interpolation.py  landscape.py  naive_weather_system.py  observations.py  perlin_noise.py  sound.py  spawn.py  visualization.py  water.py  weather.py
dirt/math/: distributions.py  quaternion.py
dirt/models/: blind_policy.py  blind_trait_policy.py  encoder.py  experimental.py  linear_trait_policy.py  mlp_policy.py  mlp_trait_policy.py  mutable_mlp_trait_policy.py  mutable_model.py  mutable_model_aaron_std.py  nomnom.py  nomnom_model.py  random_discrete_policy.py  uniform_discrete_policy.py
dirt/observations/: .gridworld2d.py.swp  gridworld2d.py
dirt/scalar2d/: dynamics.py
dirt/tests/: test_ns_variable_length.py
dirt/visualization/: height_map.py  image.py  obj.py  viewer.py  visualization.py
examples/: nom.py  nomnom.py
(+66 files in other folders)
