[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dirt"
version = "0.0.0"
authors = [
  {name="Aaron Walsman", email="aaronwalsman@gmail.com"},
]
description = "Environment building tools"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "jax",
  "flax",
  "chex",
  "splendor-render",
]

[project.urls]
Homepage = "https://github.com/aaronwalsman/dirt"
Issues = "https://github.com/aaronwalsman/dirt/issues"
