[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dirt"
version = "0.0.0"
authors = [
  {name="Aaron Walsman", email="aaronwalsman@gmail.com"},
  {name="Chloe H Su", email="suhither@gmail.com"},
  {name="Vincent Wang", email="vincentwcr041219@gmail.com"},
  {name="Joseph Bejjani", email="jbejjani2022@gmail.com"}
]
description = "Environment building tools"
readme = "README.md"
requires-python = ">=3.11,<3.13"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "jax",
  "chex",
  "hydra-core",
  "mechagogue @ git+https://github.com/aaronwalsman/mechagogue.git",
  "splendor-render @ git+https://github.com/aaronwalsman/splendor-render.git@macos",
]

[project.optional-dependencies]
cuda12 = [
  "jax[cuda12]",
]

[project.urls]
Homepage = "https://github.com/aaronwalsman/dirt"
Issues = "https://github.com/aaronwalsman/dirt/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dirt*"]
exclude = ["images*"]
